[package]
name = "simoncli"
version = "1.1.1"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "A simple, little CLI simon game"
readme = "README.md"
repository = "https://github.com/Noah2610/simoncli"
keywords = ["simon", "game"]
categories = ["games", "command-line-utilities"]
license = "Unlicense"

[dependencies]
rand = "0.6.5"
